alignmnet fix

--- a/Main/Website/LionTrust.Web/Assets/New.FrontEnd/app/styles/sass/blocks/_onboarding-overlay.sass
+++ b/Main/Website/LionTrust.Web/Assets/New.FrontEnd/app/styles/sass/blocks/_onboarding-overlay.sass
@@ -132,10 +132,10 @@
         display: flex
         justify-content: center
         width: 100%
-        margin: 140px 0 42px 0
+        margin: 0 0 42px 0
         padding: 0
         +breakpoint(mobile-large, down)
-            margin: 140px 0 20px 0
+            margin: 0 0 20px 0
     &__step
         display: inline-block
         margin: 0 5px
@@ -197,9 +197,9 @@
             padding: 0 30px
         +breakpoint(mobile-large, down)
             flex-wrap: wrap
-            padding: 0 10px
+            padding: 0 2px
             max-width: 345px
-            width: auto
+            width: 100%
         .set-location
             width: fit-content
             padding: 0 !important
